# deepcalc

./: Cargo.toml
data/: buildings.ron  mines.ron  recipes.ron  resources.ron
src/: data.rs  main.rs  model.rs
