[package]
name = "deepcalc"
version = "0.1.0"
authors = ["Daniel Ohlsson <dohlsson89@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ron = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
